crates/sui-kv-rpc/src/v2/snapshots/sui_kv_rpc__v2__pin_tests__walk__events__limit3_desc.snap
---
source: crates/sui-kv-rpc/src/v2/pin_tests.rs
expression: transcript
---
== page 0 ==
#0 item ev=(cp=4,tx_idx=1,ev=1) | wm.cursor=item(cp=4,tx=7,ev=1) wm.cp=- | end=-
#1 item ev=(cp=4,tx_idx=1,ev=0) | wm.cursor=item(cp=4,tx=7,ev=0) wm.cp=- | end=-
#2 item ev=(cp=4,tx_idx=0,ev=0) | wm.cursor=item(cp=4,tx=6,ev=0) wm.cp=- | end=QUERY_END_REASON_ITEM_LIMIT

== page 1 ==
#0 item ev=(cp=3,tx_idx=0,ev=2) | wm.cursor=item(cp=3,tx=4,ev=2) wm.cp=4 | end=-
#1 item ev=(cp=3,tx_idx=0,ev=1) | wm.cursor=item(cp=3,tx=4,ev=1) wm.cp=4 | end=-
#2 item ev=(cp=3,tx_idx=0,ev=0) | wm.cursor=item(cp=3,tx=4,ev=0) wm.cp=4 | end=QUERY_END_REASON_ITEM_LIMIT

== page 2 ==
#0 item ev=(cp=1,tx_idx=2,ev=0) | wm.cursor=item(cp=1,tx=3,ev=0) wm.cp=2 | end=-
#1 item ev=(cp=1,tx_idx=0,ev=1) | wm.cursor=item(cp=1,tx=1,ev=1) wm.cp=2 | end=-
#2 item ev=(cp=1,tx_idx=0,ev=0) | wm.cursor=item(cp=1,tx=1,ev=0) wm.cp=2 | end=QUERY_END_REASON_ITEM_LIMIT

== page 3 ==
#0 no-item | wm.cursor=boundary(cp=0,tx=0,ev=0) wm.cp=0 | end=QUERY_END_REASON_CHECKPOINT_BOUND
